--- a/infra/clustergroup/07-appproject.yaml
+++ b/infra/clustergroup/07-appproject.yaml
@@ -18,3 +18,43 @@ spec:
   sourceRepos:
   - '*'
 status: {}
+---
+apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
+  name: postgresql
+  namespace: openshift-gitops
+spec:
+  description: App Project
+  destinations:
+  - namespace: '*'
+    server: '*'
+  clusterResourceWhitelist:
+  - group: '*'
+    kind: '*'
+  namespaceResourceWhitelist:
+  - group: '*'
+    kind: '*'
+  sourceRepos:
+  - '*'
+status: {}
+---
+apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
+  name: helloworld
+  namespace: openshift-gitops
+spec:
+  description: App Project
+  destinations:
+  - namespace: '*'
+    server: '*'
+  clusterResourceWhitelist:
+  - group: '*'
+    kind: '*'
+  namespaceResourceWhitelist:
+  - group: '*'
+    kind: '*'
+  sourceRepos:
+  - '*'
+status: {}
