--- a/infra/ansible-automation-platform/base/01-automation-controller.yaml
+++ b/infra/ansible-automation-platform/base/01-automation-controller.yaml
@@ -1,28 +1,36 @@
 apiVersion: automationcontroller.ansible.com/v1beta1
 kind: AutomationController
 metadata:
-  name: controller
+  name: ngc-aap-controller
   namespace: ansible-automation-platform
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+  labels:
+    app.kubernetes.io/component: automationcontroller
+    app.kubernetes.io/managed-by: automationcontroller-operator
+    app.kubernetes.io/operator-version: ''
+    app.kubernetes.io/part-of: ngc-aap-controller
+    argocd.argoproj.io/instance: ansible-automation-platform
 spec:
+  postgres_keepalives_count: 5
+  postgres_keepalives_idle: 5
   create_preload_data: true
   route_tls_termination_mechanism: Edge
   garbage_collect_secrets: true
   ingress_type: Route
+  loadbalancer_port: 80
+  no_log: true
   image_pull_policy: IfNotPresent
+  loadbalancer_ip: ''
+  projects_storage_size: 8Gi
+  auto_upgrade: true
   task_privileged: false
+  postgres_keepalives: true
+  postgres_keepalives_interval: 5
+  ipv6_disabled: false
+  projects_storage_access_mode: ReadWriteMany
+  set_self_labels: true
   projects_persistence: false
   replicas: 3
   admin_user: admin
-  auto_upgrade: true
-  loadbalancer_ip: ""
-  loadbalancer_port: 80
   loadbalancer_protocol: http
-  postgres_keepalives: true
-  postgres_keepalives_count: 5
-  postgres_keepalives_idle: 5
-  postgres_keepalives_interval: 5
-  projects_storage_access_mode: ReadWriteMany
-  projects_storage_size: 8Gi
-  set_self_labels: true
