--- a/infra/acm/01-gitops-policy.yaml
+++ b/infra/acm/01-gitops-policy.yaml
@@ -77,7 +77,7 @@ spec:
         values:
           - OpenShift
       - key: local-cluster
-        operator: NotIn
+        operator: In
         values:
           - 'true'
 
