--- a/infra/acm/02-acm-ca-hub-policy.yaml
+++ b/infra/acm/02-acm-ca-hub-policy.yaml
@@ -61,6 +61,6 @@ spec:
   clusterSelector:
     matchExpressions:
       - key: local-cluster
-        operator: NotIn
+        operator: In
         values:
           - 'true'
